[gd_scene load_steps=5 format=3 uid="uid://meyovnb0ln3s"]

[ext_resource type="Script" uid="uid://w8yackm6cn5g" path="res://Scripts/naughty_child.gd" id="1_r11f0"]
[ext_resource type="Texture2D" uid="uid://c6iewcrwxm7pj" path="res://Assets/kid_A.png" id="2_efckc"]
[ext_resource type="Texture2D" uid="uid://cpb6el8lg5edl" path="res://Assets/kid_B.png" id="3_1ao5r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lrpdm"]
size = Vector2(14, 14)

[node name="NaughtyChild" type="RigidBody2D"]
collision_layer = 16
collision_mask = 2
gravity_scale = 0.0
script = ExtResource("1_r11f0")
textures = Array[Texture2D]([ExtResource("2_efckc"), ExtResource("3_1ao5r")])

[node name="Sprite" type="Node2D" parent="."]

[node name="Outfit" type="Sprite2D" parent="Sprite"]
region_enabled = true
region_rect = Rect2(0, 16, 16, 16)

[node name="Body" type="Sprite2D" parent="Sprite"]
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_lrpdm")

[node name="SantaCollider" type="RayCast2D" parent="."]
target_position = Vector2(0, -80)
collision_mask = 5
collide_with_areas = true

[node name="RayUp" type="RayCast2D" parent="."]
target_position = Vector2(0, -16)
collision_mask = 2
collide_with_areas = true

[node name="RayDown" type="RayCast2D" parent="."]
target_position = Vector2(0, 16)
collision_mask = 2
collide_with_areas = true

[node name="RayLeft" type="RayCast2D" parent="."]
target_position = Vector2(-16, 0)
collision_mask = 2
collide_with_areas = true

[node name="RayRight" type="RayCast2D" parent="."]
target_position = Vector2(16, 0)
collision_mask = 2
collide_with_areas = true

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
